<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/dp_9"
        android:layout_height="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_14"
        android:src="@mipmap/fanhuhei"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="@dimen/dp_70"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_153"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/addhouseuser"
        android:textColor="#ff333333"
        android:textSize="@dimen/dp_17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="@dimen/dp_28"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_332"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/achieves"
        android:textColor="#ff333333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="@dimen/dp_343"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_93"
        android:layout_marginLeft="@dimen/dp_16"
        android:text="@string/tvhouse"
        android:textColor="#ff999999"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_156"
        android:layout_marginLeft="@dimen/dp_17"
        android:layout_width="@dimen/dp_130"
        android:layout_height="wrap_content"
        android:text="@string/ahousingestate"
        android:textColor="#ff333333"
        android:textSize="@dimen/dp_16"
        />
    <TextView
        android:layout_marginTop="@dimen/dp_181"
        android:layout_marginLeft="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/dp_105"
        android:layout_height="wrap_content"
        android:text="@string/unitse"
        android:textColor="#ff333333"
        android:textSize="@dimen/sp_14"
        />
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/selector_txt"
        android:layout_width="@dimen/dp_345"
        android:layout_marginTop="@dimen/dp_209"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_height="@dimen/dp_1" />
    <TextView
        android:layout_marginTop="@dimen/dp_226"
        android:layout_marginLeft="@dimen/dp_15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/dp_82"
        android:layout_height="wrap_content"
        android:text="@string/identity"
        android:textColor="#ff999999"
        android:textSize="@dimen/dp_16"
        />
    <ImageView
        android:layout_width="@dimen/dp_7"
        android:layout_height="@dimen/dp_11"
        android:src="@mipmap/fanhuhei"
        android:layout_marginTop="@dimen/dp_226"
        android:layout_marginLeft="@dimen/dp_354"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/selector_txt"
        android:layout_width="@dimen/dp_345"
        android:layout_marginTop="@dimen/dp_259"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_height="@dimen/dp_1" />
    <TextView
        android:layout_marginTop="@dimen/dp_277"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_width="@dimen/dp_80"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/enterthename"
        android:textColor="#ff999999"
        android:textSize="16sp"
        />
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/selector_txt"
        android:layout_width="@dimen/dp_345"
        android:layout_marginTop="@dimen/dp_310"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_height="@dimen/dp_1" />
    <TextView
        android:layout_marginTop="@dimen/dp_327"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_width="@dimen/dp_114"
        android:layout_height="wrap_content"
        android:text="@string/importphonenumber"
        android:textColor="#ff999999"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/dp_98"
        android:layout_height="wrap_content"
        android:text="@string/mesg"
        android:textColor="#ff333333"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="387dp"
        android:layout_marginLeft="@dimen/dp_15"
        />
    <ImageView
        android:layout_marginTop="382dp"
        android:src="@mipmap/guan2x"
        android:layout_marginLeft="@dimen/dp_314"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_width="@dimen/dp_46"
        android:background="@drawable/selectro_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="@dimen/dp_26"/>
</android.support.constraint.ConstraintLayout>
