<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.acivity.Repairs_acivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <ImageView
            android:id="@+id/fan"
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_16"
            android:src="@mipmap/fanhuhei"/>
        <TextView
            android:layout_width="@dimen/dp_71"
            android:layout_height="@dimen/dp_18"
            android:text="@string/baixiu"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="@dimen/dp_65"
        android:layout_height="@dimen/dp_18"
        android:text="@string/fenlei"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_84"/>
    <android.support.design.widget.TabLayout
        android:id="@+id/tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"
        android:layout_marginTop="@dimen/dp_114"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_164"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/tt"
        android:layout_width="@dimen/dp_109"
        android:layout_height="@dimen/dp_16"
        android:text="问题或故障描述"
        android:layout_marginTop="@dimen/dp_180"
        android:layout_marginLeft="@dimen/dp_16"
        />

    <EditText
        android:id="@+id/et_describe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:hint="简要描述你的故障"
        android:layout_below="@+id/tt"
        android:layout_marginTop="@dimen/dp_30"
        android:textSize="@dimen/sp_14"
        android:background="@null"
        />
    <ImageView
        android:layout_width="@dimen/dp_59"
        android:layout_height="@dimen/dp_59"
        android:layout_marginTop="@dimen/dp_307"
        android:layout_marginLeft="@dimen/dp_15"
        android:src="@mipmap/tankuang"
        />
    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_344"
        android:layout_marginLeft="@dimen/dp_323"
        android:text=""
        />
    <TextView
        android:id="@+id/xian"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:layout_below="@id/tv_number"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@color/grey"/>
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/black"
        android:id="@+id/dizhi"
        android:layout_width="@dimen/dp_84"
        android:layout_height="@dimen/dp_22"
        android:layout_below="@id/xian"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_16"
        android:text="@string/fuwudizhi"/>
    
    <EditText
        android:id="@+id/site"
        android:layout_width="@dimen/dp_204"
        android:layout_height="@dimen/dp_16"
        android:layout_below="@id/dizhi"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_16"
        android:textSize="@dimen/sp_14"
        android:background="@null"
        android:hint="京东祥云社 15号楼 1单元 509"/>
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/black"
        android:id="@+id/shijian"
        android:layout_width="@dimen/dp_84"
        android:layout_height="@dimen/dp_22"
        android:layout_below="@id/site"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_16"
        android:text="@string/shijian"/>

    <EditText
        android:id="@+id/time"
        android:layout_width="@dimen/dp_204"
        android:layout_height="@dimen/dp_16"
        android:layout_below="@id/shijian"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_16"
        android:textSize="@dimen/sp_14"
        android:background="@null"
        android:hint="2019-09-03  19:00-20:00"/>

    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/black"
        android:id="@+id/dianhua"
        android:layout_width="@dimen/dp_84"
        android:layout_height="@dimen/dp_22"
        android:layout_below="@id/time"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_16"
        android:text="@string/dianhua"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="@dimen/dp_204"
        android:layout_height="@dimen/dp_16"
        android:layout_below="@id/dianhua"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_16"
        android:textSize="@dimen/sp_14"
        android:background="@null"
        android:hint="18675999521"/>
    <TextView
        android:id="@+id/quantum"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_16"
        android:text="@string/yuyueshijian"/>

    <EditText
        android:id="@+id/et_quantum"
        android:layout_width="@dimen/dp_204"
        android:layout_height="@dimen/dp_16"
        android:layout_below="@id/quantum"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_16"
        android:textSize="@dimen/sp_14"
        android:background="@null"
        android:hint="09:00:00-12:00:00"/>


    <Button
        android:id="@+id/bt_tijiao"
        android:layout_width="@dimen/dp_311"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/shop"
        android:text="提交"
        android:layout_below="@id/et_quantum"
        android:layout_marginTop="@dimen/dp_33"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_10"
        />
</RelativeLayout>
</ScrollView>