<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.My_Fragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/tou"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_169"
        android:scaleType="centerCrop"
        android:src="@mipmap/toutu" />

    <ImageView
        android:id="@+id/head"
        android:layout_width="@dimen/dp_72"
        android:layout_height="@dimen/dp_72"
        android:layout_marginLeft="@dimen/dp_21"
        android:layout_marginTop="@dimen/dp_144"
        android:src="@mipmap/morentouxiang" />

    <TextView
        android:layout_width="@dimen/dp_84"
        android:layout_height="@dimen/dp_18"
        android:layout_below="@id/tou"
        android:layout_marginLeft="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_3"
        android:layout_toRightOf="@id/head"
        android:text="祥云人家ly"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="@dimen/dp_345"
        android:layout_height="@dimen/dp_147"
        android:layout_below="@id/head"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/whis">

        <TextView
            android:id="@+id/jilu"
            android:layout_width="@dimen/dp_66"
            android:layout_height="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:text="保修记录" />

        <View
            android:id="@+id/xian"
            android:layout_width="@dimen/dp_315"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/jilu"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20" />

        <ImageView
            android:id="@+id/processing"
            android:layout_width="@dimen/dp_23"
            android:layout_height="@dimen/dp_25"
            android:layout_below="@id/xian"
            android:layout_marginLeft="@dimen/dp_36"
            android:src="@mipmap/daijiedan" />

        <ImageView
            android:id="@+id/orders"
            android:layout_width="@dimen/dp_23"
            android:layout_height="@dimen/dp_25"
            android:layout_below="@id/xian"
            android:layout_marginLeft="@dimen/dp_63"
            android:layout_toRightOf="@id/processing"
            android:src="@mipmap/chulizhong" />

        <ImageView
            android:id="@+id/payment"
            android:layout_width="@dimen/dp_23"
            android:layout_height="@dimen/dp_25"
            android:layout_below="@id/xian"
            android:layout_marginLeft="@dimen/dp_59"
            android:layout_toRightOf="@id/orders"
            android:src="@mipmap/daifukuan" />

        <ImageView

            android:id="@+id/evaluation"
            android:layout_width="@dimen/dp_23"
            android:layout_height="@dimen/dp_25"
            android:layout_below="@id/xian"
            android:layout_marginLeft="@dimen/dp_59"
            android:layout_toRightOf="@id/payment"
            android:src="@mipmap/daipingjia" />

        <TextView
            android:id="@+id/jiedan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/processing"
            android:layout_marginLeft="@dimen/dp_28"
            android:text="@string/daijiedan"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/chuli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/processing"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_toRightOf="@id/jiedan"
            android:text="@string/chulizhong"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/daifu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/processing"
            android:layout_marginLeft="@dimen/dp_46"
            android:layout_toRightOf="@id/chuli"
            android:text="@string/daifukuan"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/evaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/processing"
            android:layout_marginLeft="@dimen/dp_48"
            android:layout_toRightOf="@id/daifu"
            android:text="@string/daipingjia"
            android:textColor="@color/grey"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_fang"
        android:layout_width="@dimen/dp_345"
        android:layout_height="@dimen/dp_205"
        android:layout_below="@+id/rl"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/whis">

        <TextView
            android:id="@+id/fangwu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20"
            android:text="我的房屋"
            android:textColor="#ff333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/geng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_206"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_toRightOf="@id/fangwu"
            android:text="更多"
            android:textColor="#ff999999"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="7dp"
            android:layout_height="11dp"
            android:layout_marginTop="@dimen/dp_26"
            android:layout_toRightOf="@id/geng"
            android:layout_marginLeft="@dimen/dp_5"
            android:src="@mipmap/jinru" />

        <View
            android:id="@+id/xian1"
            android:layout_width="@dimen/dp_315"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/geng"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_22" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/xian1"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20"
            android:text="京西祥云小区"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/louhao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20"
            android:text="5号楼"
            android:textSize="14sp" />
       
        <ImageView
            android:id="@+id/rentou1"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:layout_below="@id/louhao"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@mipmap/morentouxiang" />

        <ImageView
            android:id="@+id/rentou2"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:layout_below="@id/louhao"
            android:layout_marginLeft="@dimen/dp_26"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@mipmap/morentouxiang" />

        <ImageView
            android:id="@+id/rentou3"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:layout_below="@id/louhao"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@mipmap/morentouxiang" />

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/louhao"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_toRightOf="@id/rentou3"
            android:text="26人参与"
            android:textColor="#ffcb904c"
            android:textSize="11sp" />


    </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/dp_345"
            android:layout_height="@dimen/dp_238"
            android:background="@drawable/whis"
            android:layout_below="@+id/rl_fang"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
          >
            <TextView
                android:id="@+id/huo"
                android:layout_width="@dimen/dp_66"
                android:layout_height="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:text="我的活动"
                android:textColor="#ff333333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/geng1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_206"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_toRightOf="@id/huo"
                android:text="更多"
                android:textColor="#ff999999"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="7dp"
                android:layout_height="11dp"
                android:layout_marginTop="@dimen/dp_26"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_toRightOf="@id/geng1"
                android:src="@mipmap/jinru" />

            <View
                android:id="@+id/xian2"
                android:layout_width="@dimen/dp_315"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@id/shidai"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_22" />

            <TextView
                android:id="@+id/shidai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:text="享受新时代"
                android:layout_below="@+id/huo"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/shidai"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:text="活动时间"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/jie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/time"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:text="活动时间"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/dizhi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jie"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:text="活动时间"
                android:textSize="14sp" />
            <ImageView
                android:id="@+id/rentous"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_below="@id/dizhi"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:src="@mipmap/morentouxiang" />

            <ImageView
                android:id="@+id/rentous1"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_below="@id/dizhi"
                android:layout_marginLeft="@dimen/dp_26"
                android:layout_marginTop="@dimen/dp_15"
                android:src="@mipmap/morentouxiang" />

            <ImageView
                android:id="@+id/rentous3"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_below="@id/dizhi"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:src="@mipmap/morentouxiang" />

            <TextView
                android:id="@+id/nums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dizhi"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_toRightOf="@id/rentous3"
                android:text="26人参与"
                android:textColor="#ffcb904c"
                android:textSize="11sp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
